# arm-test-data

./: LICENSE  MANIFEST.in  README.md  make_registry.py  pyproject.toml
.github/workflows/: ci.yaml  pypi-release.yml
act_test_data/: dataset.py  registry.txt
arm_test_data/: __init__.py  dataset.py  registry.txt
ci/: environment.yml
data/: AMF_US-CU1_BIF_20250318.xlsx  US1200R.20200101000000.20210214053818.nephelometer.aerosol_light_scattering_coefficient.pm10.1y.1h.US06L_TSI_3563_MLO.US06L_scat_coef.lev2.nas  bnfldquantsM1.c1.20250619.000000.nc  bnfldquantsS30.c1.20250619.000000.nc  bnfmetM1.b1.20250619.000000.cdf  bnfmetS20.b1.20250619.000000.cdf  bnfmetS30.b1.20250619.000000.cdf  bnfmetS40.b1.20250619.000000.cdf  bnfmetwxtS13.b1.20250619.000100.nc  bnfsondewnpnM1.b1.20250619.053000.cdf  bnfwbpluvio2M1.a1.20250619.000000.nc  enatsiskycoverC1.b1.20230307.082100.cdf  houmergedsmpsapsmlM1.c1.20220801.000000.nc  houstonaug300.0summer2010080100  sgpamcE39.b1.20230601.000000.nc  sgpaosacsmE13.b2.20230420.000109.nc  sgpecorsfE39.b1.20230601.000000.nc  sgpsebsE39.b1.20230601.000000.cdf  sgpsirsC1.b1.20040101.000000.cdf  sgpstampE39.b1.20230601.000000.nc  sgpstamppcpE39.b1.20230601.000000.nc  sgpswatsE8.b1.20071229.000700.cdf
tests/: test_dataset.py
